--- a/contacto.html
+++ b/contacto.html
@@ -1,13 +1,6 @@
 ---
-layout: default
-title: Contacto
-permalink: /contacto/
+layout: page
+title: Contact
+permalink: /contact/
 ---
- <div class="ae-container-fluid ae-container-fluid--inner rk-main">
-  <div class="ae-grid au-xs-ta-center au-mb-4">
-    <div class="ae-grid__item item-lg-12 ae-kappa au-mb-12">
-      <br>
-        {% include contact_form.html %}
-    </div>
-  </div>
-</div>
+ {% include contact_form.html %}
