--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Acerca de
-permalink: /acerca-de/
+title: About
+permalink: /about/
 ---
  <div class="ae-container-fluid ae-container-fluid--inner rk-main">
 
@@ -10,17 +10,16 @@ permalink: /acerca-de/
       <h5 class="ae-u-bolder au-mt-2">Ismael López</h5>
       <p class="ae-u-bolder au-mb-3">Computer Systems Engineer - Specialty in Database</p>
       <p class="au-lg-ta-left au-mb-3 au-pl-4 au-pr-4">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        I am a back-end web developer with a passion for open source technologies. I have been a PHP developer for some years, and also have experience with Java. Apart from that, I also spend time on making online courses, so be sure to check those out!
       </p>
-      <a href="https://www.facebook.com/ismaeldevmw" target="_blank" class="ae-u-bolder au-underline">@ismaeldevmw</a>
+      <a href="https://twitter.com/ismaeldevmw?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @ismaeldevmw</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
   </div>
 
   <div class="ae-grid ae-grid--alt au-xs-ptp-1">
     <div class="ae-grid__item--alt item-lg-4">
       <h6 class="ae-u-boldest">About Us</h6>
-      <p class="au-lh-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      <p class="au-lh-3">Runcodig is an idea that I began in the year 2016, there you can find content about the world of programing, in general I share my experiences from my carrer profesional and new knowlege that I learn with experiments or projects that let me fun and stay happy.</p>
     </div>
     <div class="ae-grid__item--alt item-lg-4">
       <h6 class="ae-u-boldest">Our Mission</h6>
@@ -34,7 +33,7 @@ permalink: /acerca-de/
   </div>
 
   <p class="au-flex au-pt-4 group-buttons">
-    <a href="/portafolio/" class="au-mt-4 arrow-button arrow-button--right arrow-button--out">Mira mi portafolio
+    <a href="/portafolio/" class="au-mt-4 arrow-button arrow-button--right arrow-button--out">View My Portfolio
       <span class="arrow-cont">
         <svg>
           <use xlink:href="/assets/img/symbols.svg#arrow"></use>
