--- a/videos.html
+++ b/videos.html
@@ -1,18 +1,15 @@
 ---
-layout: default
+layout: page
 title: Videos
 permalink: /videos/
 ---
-<section class="ae-container-fluid rk-main">
- <section class="ae-container-fluid ae-container-fluid--inner rk-portfolio">
-   <div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-3">
-     {% for item in site.cursos %}
-     <a href="{{ item.link }}" target="_blank" class="rk-item ae-masonry__item"><img src="{{ item.thumbnail }}">
-       <div class="item-meta">
-         <h2>{{ item.title }}</h2>         
-       </div>
-     </a>
-     {% endfor %}
-   </div>
- </section>
-</section>
+<div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-3">
+  {% for item in site.videos %}
+  <a href="{{ item.link }}" target="_blank" class="rk-item ae-masonry__item">
+    <img src="{{ item.thumbnail }}">
+    <div class="item-meta">
+      <p>{{ item.title }}</p>
+    </div>
+  </a>
+  {% endfor %}
+</div>
