--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ title: Learn to code
      <span class="item-date">
       <small>publicado el {{ post.date | date: "%d/%m/%Y" }}</small></p>
      </span>
+     <span class="item-description">
+      <p>{{ post.excerpt }}</p>
+     </span>
      <span class="item-tags">
       <strong><small>{{ post.tags }}</small></strong>
      </span>
