--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Learn to code
 ---
-<div class="ae-masonry ae-masonry-sm-1 ">
+<div class="ae-masonry ae-masonry-sm-1 ae-masonry-md-3">
 {% for post in paginator.posts %}
  <a href="{{ post.url }}" class="rk-item ae-masonry__item">
    <img src="{{ post.thumbnail }}" />
