Quite el estracto del post.
Osea quite la linea {{ post.excerpt }} que genera una pequeña parte del código.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Learn to code
       <small>publicado el {{ post.date | date: "%d/%m/%Y" }}</small></p>
      </span>
      <span class="item-description">
-      <small>{{ post.excerpt }}</small>
+      <small></small>
      </span>
      <span class="item-tags">
       <strong><small>{{ post.tags }}</small></strong>
